Fix menu vertical alignment

--- a/public-site/site/_style/components.global-nav.scss
+++ b/public-site/site/_style/components.global-nav.scss
@@ -1,4 +1,5 @@
 .c-global-nav {
+  align-items: center;
   display: flex;
   flex-wrap: wrap;
   font-family: var(--heading-font-family);
